--- a/style/style.css
+++ b/style/style.css
@@ -1,33 +1,36 @@
-.search-bar {
-    margin: 20px;
+body{
+    background-image: url("/test/sand.jpg");
+}
+.style{
+text-align: center;
+    font-size: 60px;
+    font-family:FontAwesome;
+    font-weight: bold;
+    border:2px solid black;
+}
+.row{
+    margin-top:120px;
+
+}
+.size{
+
+    font-size: 20px;
+    width:70px;
+    height:70px;
+    border-radius:50%;
+}
+
+.color1{
+    background:#293d3d;
+    color:white;
+}
+.color2{
+background:#3d5c5c;
+    color:white;
+}
+.change{
+    font-size: 40px;
     text-align: center;
+    margin-top:40px;
+
 }
-
-.search-bar input {
-    width: 75%;
-}
-
-.video-item img {
-    max-width: 64px;
-}
-
-.video-detail .details {
-    margin-top: 10px;
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 4px;
-}
-
-.list-group-item {
-    cursor: pointer;
-}
-
-.list-group-item:hover {
-    background-color: #eee;
-}
-
-
-
-
-
-
